--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ fast-glob     = "=0.4.5"
 toml          = "=0.8.20"
 serde         = { version = "=1.0.219", features = ["derive"] }
 serde_json    = "=1.0.140"
+chrono        = "=0.4.38"
 
 [dev-dependencies]
 rand   = "=0.9.1"
